# ring-lang-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/basic/: Cargo.toml  test.ring
examples/basic/src/: lib.rs
examples/embed/: Cargo.toml  script.ring
examples/embed/src/: main.rs
macros/: Cargo.toml  README.md
macros/examples/datetime-demo/: Cargo.toml  test.ring
macros/examples/datetime-demo/src/: lib.rs
macros/examples/hash-demo/: Cargo.toml  test.ring
macros/examples/hash-demo/src/: lib.rs
macros/examples/json-demo/: Cargo.toml  test.ring
macros/examples/json-demo/src/: lib.rs
macros/examples/regex-demo/: Cargo.toml  test.ring
macros/examples/regex-demo/src/: lib.rs
macros/examples/uuid-demo/: Cargo.toml  test.ring
macros/examples/uuid-demo/src/: lib.rs
macros/src/: lib.rs
src/: api.rs  ffi.rs  general.rs  item.rs  lib.rs  list.rs  macros.rs  state.rs  string.rs  tests.rs  vm.rs
tools/codegen/: README.md  gendoc.ring  parsec.ring  parsec_lib.ring
tools/codegen/examples/datetime-demo/: API.md  Cargo.toml  datetime.rf  test.ring
tools/codegen/examples/datetime-demo/src/: lib.rs
tools/codegen/examples/hash-demo/: API.md  Cargo.toml  hash.rf  hash_classes.ring  test.ring  test_classes.ring
tools/codegen/examples/hash-demo/src/: lib.rs
tools/codegen/examples/json-demo/: API.md  Cargo.toml  json.rf  test.ring
tools/codegen/examples/json-demo/src/: lib.rs
tools/codegen/examples/uuid-demo/: API.md  Cargo.toml  test.ring  uuid.rf
tools/codegen/examples/uuid-demo/src/: lib.rs
