[package]
name = "ring_json"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ring-lang-codegen = "0.1"
ring-lang-rs = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
